--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
 #    throw-exception-if-no-handler-found: true
 
   profiles:
-    active: prod
+    active: dev
 
 ---
 #dev profile
@@ -53,4 +53,3 @@ security:
     prefix: Bearer
     expiration: 86400 #{24*60*60}
     secret: FrostLoginSecret
-
