--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,12 +9,15 @@ spring:
 #    throw-exception-if-no-handler-found: true
 
   profiles:
-    active: dev
+#    active: dev
+#    active: ui
+    active: test
 
 ---
 #dev profile
 
 spring:
+
   profiles: dev
 
   datasource:
@@ -35,7 +38,29 @@ server:
 ---
 #Prod Profile
 spring:
-  profiles: prod
+  profiles: test
+
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://13.127.157.211:3306/userdatabase_test
+    username: dev
+    password: 7777
+
+server:
+  port: 9000
+
+security:
+  jwt:
+    login-uri: /login
+    header: Authorization
+    prefix: Bearer
+    expiration: 86400 #{24*60*60}
+    secret: FrostLoginSecret
+
+---
+#Prod Profile
+spring:
+  profiles: ui
 
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
