--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,72 +9,7 @@ spring:
 #    throw-exception-if-no-handler-found: true
 
   profiles:
-#    active: dev
+    active: dev
 #    active: ui
-    active: test
+#    active: test
 
----
-#dev profile
-
-spring:
-
-  profiles: dev
-
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/user_db
-    username: root
-    password: 7777
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-
-server:
-  port: 9000
-
-
----
-#Prod Profile
-spring:
-  profiles: test
-
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://13.127.157.211:3306/userdatabase_test
-    username: dev
-    password: 7777
-
-server:
-  port: 9000
-
-security:
-  jwt:
-    login-uri: /login
-    header: Authorization
-    prefix: Bearer
-    expiration: 86400 #{24*60*60}
-    secret: FrostLoginSecret
-
----
-#Prod Profile
-spring:
-  profiles: ui
-
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://13.127.157.211:3306/userdatabase
-    username: dev
-    password: 7777
-
-server:
-  port: 9000
-
-security:
-  jwt:
-    login-uri: /login
-    header: Authorization
-    prefix: Bearer
-    expiration: 86400 #{24*60*60}
-    secret: FrostLoginSecret
